# Edgecoder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.anchor-proxy  Dockerfile.docs  EDGECODER_PLAN.md  LICENSE  README.dev.md  README.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-docs.yml  deploy-fly.yml  release.yml
deploy/fly/: fly.anchor-proxy.toml  fly.control-plane.toml  fly.coordinator-2.toml  fly.docs.toml  fly.inference.toml  fly.portal.toml  fly.seed-eu.toml  fly.seed-node.toml  fly.toml
deploy/linux/: bootstrap-host.sh
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docker/: sandbox-node.Dockerfile  sandbox-python.Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  agent-and-coordinator-install.md  cross-os-validation.md  deployment-plan-checklist.md  docs-site-deployment.md  flyio-bootstrap.md  ios-app-store-release.md  macos-installer.md  public-mesh-operations.md  security-baseline.md
docs/adrs/: 0001-locked-decisions.md
docs/archive/: 2026-02-22-ble-local-mesh-design.md  2026-02-22-model-management-design.md  (+2 more)
extensions/vscode/: package.json  (+2 more)
scripts/: bundle-agent-resources.sh  compute-dist-hash.ts  fly-teardown-checklist.sh  sign-release.sh
site-docs/: index.md
src/: index.ts
tests/: executor.test.ts  swarm-queue.test.ts
(+406 files in other folders)
